@@ -25,11 +25,12 @@
  *  DESCRIPTION
  *
  *    Compute the log gamma correction factor for x >= 10 so that
+ *                                               ---------
  *
  *    log(gamma(x)) = .5*log(2*pi) + (x-.5)*log(x) -x + lgammacor(x)
  *
- *    [ lgammacor(x) is called	Del(x)	in other contexts (e.g. dcdflib)]
- *
+ *    [ lgammacor(x) is called	Del(x)	in other contexts (e.g. dcdflib)], or  stirlerr(x)
+ *				~~~~~~					       ~~~~~~~~~~~
  *  NOTES
  *
  *    This routine is a translation into C of a Fortran subroutine
@@ -68,18 +69,20 @@ double attribute_hidden lgammacor(double x)
  *   xmax = DBL_MAX / 48 =  2^1020 / 3 */
 #define nalgm 5
 #define xbig  94906265.62425156
-#define xmax  3.745194030963158e306
 
     if (x < 10) // possibly consider stirlerr()
 	ML_WARN_return_NAN
+#ifndef IEEE_754
+#   define xmax  3.745194030963158e306
     else if (x >= xmax) {
 	ML_WARNING(ME_UNDERFLOW, "lgammacor");
 	/* allow to underflow below */
     }
+#endif
     else if (x < xbig) {
 	double tmp = 10 / x;
 	return chebyshev_eval(tmp * tmp * 2 - 1, algmcs, nalgm) / x;
     }
-    // else, xbig <= x < xmax :
+    // x >= xbig
     return 1 / (x * 12);
 }
